# mcp-synology

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  platform_test_report.yml
.github/actions/install-mcp-publisher/: action.yml
.github/workflows/: ci.yml  dependabot-changelog.yml  pr-labels-ci.yml  publish.yml  test-publish.yml  vdsm.yml
docs/: credentials.md  error-codes.md
docs/adr/: 0001-per-client-dsm-sessions.md
docs/specs/: architecture.md  config-schema-spec.md  filestation-module-spec.md  project-scaffolding-spec.md
examples/: config-minimal.yaml  config-power-user.yaml
scripts/: migrate-from-synology-mcp.py  sync-server-json.py  vdsm_setup.py
src/mcp_synology/: __init__.py  __main__.py  server.py
src/mcp_synology/cli/: __init__.py  check.py  main.py  setup.py  version.py
src/mcp_synology/core/: auth.py  client.py  config.py  errors.py  formatting.py  fs.py  state.py
src/mcp_synology/instructions/: server.md
src/mcp_synology/modules/: __init__.py
src/mcp_synology/modules/filestation/: __init__.py  helpers.py  listing.py  metadata.py  operations.py  search.py  transfer.py
src/mcp_synology/modules/system/: __init__.py  info.py  utilization.py
src/synology_mcp/: cli.py  server.py
src/synology_mcp/cli/: main.py  version.py
src/synology_mcp/core/: auth.py  client.py  config.py  errors.py  formatting.py
src/synology_mcp/instructions/: server.md
src/synology_mcp/modules/filestation/: listing.py  metadata.py  operations.py  search.py
src/synology_mcp/modules/system/: __init__.py  info.py  utilization.py
test-data/: awareness.db
tests/: conftest.py  integration_config.yaml.example  test_e2e.py  test_integration.py
tests/core/: test_auth.py  test_cli.py  test_cli_setup.py  test_cli_version.py  test_client.py  test_config.py  test_errors.py  test_formatting.py  test_fs.py  test_help_urls.py  test_server.py  test_state.py
tests/modules/: test_module_system.py
tests/modules/filestation/: test_helpers.py  test_listing.py  test_metadata.py  test_operations.py  test_register.py  test_search.py  test_transfer.py
tests/modules/system/: test_info.py  test_register.py  test_utilization.py
tests/scripts/: test_sync_server_json.py
tests/vdsm/: config.py  conftest.py  container.py  golden_image.py  setup_dsm.py  ssh.py  test_vdsm_integration.py
