[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-synology"
version = "0.5.0"
description = "MCP server for Synology NAS — manage files on your NAS via Claude"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Chris Means" },
]
keywords = ["mcp", "synology", "nas", "file-station"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "keyring>=25.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "respx>=0.22",
]
vdsm = [
    "testcontainers>=4.0",
    "playwright>=1.50",
]

[project.scripts]
mcp-synology = "mcp_synology.cli:main"

[project.urls]
Homepage = "https://github.com/cmeans/mcp-synology"
Repository = "https://github.com/cmeans/mcp-synology"
Issues = "https://github.com/cmeans/mcp-synology/issues"
Documentation = "https://github.com/cmeans/mcp-synology/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_synology"]
artifacts = [
    "src/mcp_synology/instructions/*.md",
    "src/mcp_synology/icons/*.svg",
    "src/mcp_synology/icons/*.png",
    "src/mcp_synology/icons/*.ico",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# vdsm tooling requires the optional [vdsm] extras (playwright, testcontainers)
# which are not installed in the standard dev environment. Exclude both the
# script and the test helpers it imports so default `mypy src/ scripts/` runs
# clean. Run `uv sync --extra vdsm` and target these files explicitly to type
# check them.
exclude = [
    "scripts/vdsm_setup\\.py$",
    "tests/vdsm/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a real Synology NAS (not run in CI)",
    "vdsm: requires virtual-dsm Docker container with KVM (not run in CI by default)",
]
addopts = "-m 'not integration and not vdsm' --cov=mcp_synology --cov-fail-under=95"
